Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1092,6 +1092,16 @@
                             <tr>
                                 <td>超</td>
                                 <td>¥8.88</td>
+                                <td>江湖</td>
+                                <td>¥10.24</td>
+                                <td>林伟</td>
+                                <td>¥5</td>
+                                <td>林海松涛</td>
+                                <td>¥2.66</td>
+                            </tr>
+                            <tr>
+                                <td>平安是福</td>
+                                <td>¥0.66+¥0.88</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
