Add jadx and android-classyshark

--- a/index.html
+++ b/index.html
@@ -1923,6 +1923,20 @@
                                     </td>
                                     <td align="center"></td>
                                 </tr>
+                                <tr>
+                                    <td align="left">jadx</td>
+                                    <td align="center">Dex to Java decompiler</td>
+                                    <td align="center"><a href="https://github.com/skylot/jadx">下载</a>
+                                    </td>
+                                    <td align="center"></td>
+                                </tr>
+                                <tr>
+                                    <td align="left">android-classyshark</td>
+                                    <td align="center">a handy Android and Java executables viewer</td>
+                                    <td align="center"><a href="https://github.com/google/android-classyshark">下载</a>
+                                    </td>
+                                    <td align="center"></td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
