Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1102,12 +1102,12 @@
                             <tr>
                                 <td>平安是福</td>
                                 <td>¥0.66+¥0.88</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>牛艳丽</td>
+                                <td>¥5</td>
+                                <td>康</td>
+                                <td>¥0.1</td>
+                                <td>kavin</td>
+                                <td>¥10</td>
                             </tr>
                         </tbody>
                     </table>
