Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1109,6 +1109,16 @@
                                 <td>kavin</td>
                                 <td>¥10</td>
                             </tr>
+                            <tr>
+                                <td>天天天</td>
+                                <td>¥10.24</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
