Add Android Studio and gradle 2.11 link

--- a/index.html
+++ b/index.html
@@ -242,6 +242,33 @@
                             </tr>
                         </thead>
                         <tbody>
+                        	<!-- 2.1 Preview1 -->
+							<tr>
+							  <td rowspan="4">2.1 Preview1</td>
+							</tr>
+							<tr>
+							  <td >Windows</td>
+							  <td align="left"><a href="http://pan.baidu.com/s/1i3NHmPf">android-studio-ide-143.2664576-windows.zip</a></td>
+							  <td>307 MB</td>
+							  <td>6c1e0e2e97b29de75987450051ce0d57bb6c8b63</td>
+							  <td rowspan="4"><a href="http://ww4.sinaimg.cn/large/8a41f469gw1f1s3pp395yj21jq0uygx8.jpg">查看</a></td>
+							</tr>
+							<tr>
+							  <td><nobr>Mac OS X</nobr></td>
+							  <td align="left">
+								<a href="http://pan.baidu.com/s/1i3NHmNb">android-studio-ide-143.2664576-mac.zip</a>
+							  </td>
+							  <td>305 MB</td>
+							  <td>6f72df2f56b31d5ef27a482b0d198039715bcedf</td>
+							</tr>
+							<tr>
+							  <td>Linux</td>
+							  <td align="left">
+								<a href="http://pan.baidu.com/s/1c1eMw7Y">android-studio-ide-143.2664576-linux.zip</a>
+							  </td>
+							  <td>304 MB</td>
+							  <td>7b7f936ff7eb6ef4c2446fc3406ccd09ccf2737a</td>
+							</tr>
                             <!-- 2.0 Beta6 -->
                             <tr>
                                 <td rowspan="4">2.0 Beta6</td>
@@ -1640,6 +1667,9 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                	<tr>
+                                        <td align="left"><a href="http://pan.baidu.com/s/1gewXkzx">gradle-2.11-all.zip</a></td>
+                                    </tr>
                                     <tr>
                                         <td align="left"><a href="http://pan.baidu.com/s/1mhrKIF2">gradle-2.10-all.zip</a></td>
                                     </tr>
