Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1114,10 +1114,10 @@
                                 <td>¥10.24</td>
                                 <td>不扯</td>
                                 <td>¥5</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>元豪</td>
+                                <td>¥0.1</td>
+                                <td>waa</td>
+                                <td>¥2</td>
                             </tr>
                         </tbody>
                     </table>
