Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1119,6 +1119,16 @@
                                 <td>waa</td>
                                 <td>¥2</td>
                             </tr>
+                            <tr>
+                                <td>张帆</td>
+                                <td>¥1</td>
+                                <td>HZY</td>
+                                <td>¥1.11</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
