Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1124,8 +1124,8 @@
                                 <td>¥1</td>
                                 <td>HZY</td>
                                 <td>¥1.11</td>
-                                <td></td>
-                                <td></td>
+                                <td>宝光在线</td>
+                                <td>¥0.88</td>
                                 <td></td>
                                 <td></td>
                             </tr>
