--- a/index.html
+++ b/index.html
@@ -1967,6 +1967,13 @@
                                     </td>
                                     <td align="center"></td>
                                 </tr>
+                                <tr>
+                                    <td align="left">ShakaApktool</td>
+                                    <td align="center"></td>
+                                    <td align="center"><a href="https://github.com/rover12421/ShakaApktool">下载</a>
+                                    </td>
+                                    <td align="center"></td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
