Add duoshuo comment tuo gay friends page

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -207,6 +207,13 @@
 	                </ul>
             	</div>
             </div>
+            <div class="row">
+	            <div id="duoshuo-comment">
+	            	<!-- 多说评论框 start -->
+					<div class="ds-thread" data-thread-key="686835c9a9956700" data-title="AndroidDevTools的好基友们" data-url="http://www.androiddevtools.cn/gay_friends.html"></div>
+					<!-- 多说评论框 end -->
+	            </div>
+        	</div>
         </div>
     </section>
     <div class="zh-backtotop">
@@ -240,6 +247,19 @@
         hideMore: true
     }
     </script>
+    <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+	<script type="text/javascript">
+	var duoshuoQuery = {short_name:"androiddevtoolsgfriends"};
+		(function() {
+			var ds = document.createElement('script');
+			ds.type = 'text/javascript';ds.async = true;
+			ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+			ds.charset = 'UTF-8';
+			(document.getElementsByTagName('head')[0] 
+			 || document.getElementsByTagName('body')[0]).appendChild(ds);
+		})();
+	</script>
+<!-- 多说公共JS代码 end -->
     <script src="static/js/jquery-1.11.3.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/jquery.smooth-scroll.min.js"></script>
