Modify index page duoshuo comment layout

--- a/index.html
+++ b/index.html
@@ -4297,7 +4297,9 @@
                         <a href="http://www.jiathis.com/share?uid=1948353" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
                         <a class="jiathis_counter_style"></a>
                     </div>
-                    <div id="duoshuo-comment">
+                </div>
+                <div class="row">
+                	<div id="duoshuo-comment">
                         <!-- 多说评论框 start -->
                         <div class="ds-thread" data-thread-key="686835c9a9956696" data-title="AndroidDevTools" data-url="http://www.androiddevtools.cn"></div>
                         <!-- 多说评论框 end -->
