Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1126,6 +1126,36 @@
                                 <td>¥1.11</td>
                                 <td>宝光在线</td>
                                 <td>¥0.88</td>
+                                <td>Freedom</td>
+                                <td>¥5</td>
+                            </tr>
+                            <tr>
+                                <td>Jacen</td>
+                                <td>¥1</td>
+                                <td>大师兄</td>
+                                <td>¥1</td>
+                                <td>wander</td>
+                                <td>¥1.66</td>
+                                <td>&</td>
+                                <td>¥2.5</td>
+                            </tr>
+                            <tr>
+                                <td>国庆</td>
+                                <td>¥5</td>
+                                <td>其龙</td>
+                                <td>¥1</td>
+                                <td>我比你要剑</td>
+                                <td>¥1</td>
+                                <td>海滨</td>
+                                <td>¥6</td>
+                            </tr>
+                            <tr>
+                                <td>龚会元</td>
+                                <td>¥0.88</td>
+                                <td>爱你不管他</td>
+                                <td>¥3</td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
