Add ad click link toast message

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 340px;">
-		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07">
-			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg' border="0"/>
+		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言反馈这个课程的学习情况">
+			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg' border="0" />
 		</a>
 	</div>
     <section id="body">
