Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1154,6 +1154,16 @@
                                 <td>¥0.88</td>
                                 <td>爱你不管他</td>
                                 <td>¥3</td>
+                                <td>刘伟强</td>
+                                <td>¥10.24</td>
+                                <td>追梦</td>
+                                <td>¥1.5</td>
+                            </tr>
+                            <tr>
+                            	<td>不轻易说出口</td>
+                                <td>¥5</td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
