Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1162,8 +1162,18 @@
                             <tr>
                             	<td>不轻易说出口</td>
                                 <td>¥5</td>
-                                <td></td>
-                                <td></td>
+                                <td>DQDQ</td>
+                                <td>¥1</td>
+                                <td>@Nullable</td>
+                                <td>¥30</td>
+                                <td>薛昊</td>
+                                <td>¥5</td>
+                            </tr>
+                            <tr>
+                            	<td>洋</td>
+                                <td>¥6.66</td>
+                                <td>Eman</td>
+                                <td>¥10.24</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
