Add Android Stduio beta7 ~ preivew 3 link

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 340px;">
-		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言反馈这个课程的学习情况">
+		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况">
 			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg' border="0" />
 		</a>
 	</div>
@@ -242,6 +242,34 @@
                             </tr>
                         </thead>
                         <tbody>
+                        	<!-- 2.1 Preview3 -->
+							<tr>
+							  <td rowspan="4">2.1 Preview3</td>
+								</tr>
+							<tr>
+							  <td >Windows</td>
+							  <td align="left"><a href="http://pan.baidu.com/s/1bfAQgm">android-studio-ide-143.2682553-windows.zip</a></td>
+							  <td>293 MB</td>
+							  <td>37f3eb187a92a6722c21e2aa1ef7d0624a169aa6</td>
+							  <td rowspan="4"><a href="http://ww4.sinaimg.cn/large/8a41f469jw1f25w78f9hgj21fm0tgqe3.jpg">查看</a></td>
+							</tr>
+							<tr>
+							  <td><nobr>Mac OS X</nobr></td>
+							  <td align="left">
+										<a href="http://pan.baidu.com/s/1skdKxQX">android-studio-ide-143.2682553-mac.zip</a>
+							  </td>
+							  <td>292 MB</td>
+							  <td>952911e5bddd82b0bf87c10c1e8f9c726ad38920</td>
+							</tr>
+
+							<tr>
+							  <td>Linux</td>
+							  <td align="left">
+										<a href="http://pan.baidu.com/s/1kTRf8G3">android-studio-ide-143.2682553-linux.zip</a>
+							  </td>
+							  <td>291 MB</td>
+							  <td>2fcef56cb22dbc87269c94d13ad50ab6005f50fa</td>
+							</tr>
                         	<!-- 2.1 Preview1 -->
 							<tr>
 							  <td rowspan="4">2.1 Preview1</td>
@@ -268,6 +296,33 @@
 							  </td>
 							  <td>304 MB</td>
 							  <td>7b7f936ff7eb6ef4c2446fc3406ccd09ccf2737a</td>
+							</tr>
+							<!-- 2.1 Beta7 -->
+							<tr>
+							  <td rowspan="4">2.1 Beta7</td>
+								</tr>
+							<tr>
+							  <td >Windows</td>
+							  <td align="left"><a href="http://pan.baidu.com/s/1eRbyTs2">android-studio-ide-143.2682552-windows.zip</a></td>
+							  <td>304 MB</td>
+							  <td>e1cf6d8f586a25f83d2994896f65c185614baeb1</td>
+							  <td rowspan="4"><a href="http://ww4.sinaimg.cn/large/8a41f469jw1f25w8rbsquj21dw0uk7f4.jpg">查看</a></td>
+							</tr>
+							<tr>
+							  <td><nobr>Mac OS X</nobr></td>
+							  <td align="left">
+										<a href="http://pan.baidu.com/s/1qWZIM1A">android-studio-ide-143.2682552-mac.zip</a>
+							  </td>
+							  <td>303 MB</td>
+							  <td>56e178d8dfec8146d40a00c4818729645ee950f1</td>
+							</tr>
+							<tr>
+							  <td>Linux</td>
+							  <td align="left">
+										<a href="http://pan.baidu.com/s/1kUjwt4j">android-studio-ide-143.2682552-linux.zip</a>
+							  </td>
+							  <td>302 MB</td>
+							  <td>17e432a9eb701e791365cedec9783a23f3a97fcd</td>
 							</tr>
                             <!-- 2.0 Beta6 -->
                             <tr>
