Add NDK 11b link

--- a/index.html
+++ b/index.html
@@ -1484,11 +1484,44 @@
                                 <th>Platform</th>
                                 <th>Package</th>
                                 <th style="white-space:nowrap">Size (Bytes)</th>
-                                <th>MD5 Checksum</th>
+                                <th>MD5/SHA1 Checksum</th>
                                 <th>官方MD5校验码截图</th>
                             </tr>
                         </thead>
                         <tbody>
+							<tr>
+							  <td rowspan="4">NDK r11b</td>
+							  <td>Windows 32-bit</td>
+							  <td align="left">
+							    <a href="http://pan.baidu.com/s/1JWvUI">android-ndk-r11b-windows-x86.zip</a>
+							  </td>
+							  <td>728894948</td>
+							  <td>b42da395440cc1c5dc4eeeb383679331addeb3ea</td>
+							  <td rowspan="4"><a href="http://ww2.sinaimg.cn/large/8a41f469gw1f25wwym8t6j21kw0rxwja.jpg">查看</a></td>
+							</tr>
+							<tr>
+							  <td>Windows 64-bit</td>
+							  <td align="left">
+							    <a href="http://pan.baidu.com/s/1pKlqcZL">android-ndk-r11b-windows-x86_64.zip</a>
+							  </td>
+							  <td>771396549</td>
+							  <td>480eca1b29cfe73a5b35374730e6a82ca65c2aa6</td>
+							</tr>
+							<tr><td>Mac OS X 64-bit</td>
+							  <td align="left">
+							    <a href="http://pan.baidu.com/s/1pKi8yJT">android-ndk-r11b-darwin-x86_64.zip</a>
+							  </td>
+							  <td>772411311</td>
+							  <td>c64fb355fec4da57d329ab45bf0aa29a1aec58dc</td>
+							</tr>
+							<tr>
+							  <td>Linux 64-bit (x86)</td>
+							  <td align="left">
+							    <a href="http://pan.baidu.com/s/1c0YLv00">android-ndk-r11b-linux-x86_64.zip</a>
+							  </td>
+							  <td>794138413</td>
+							  <td>cf0658956945c81d3d3fad5f9a24fa062d4c9d41</td>
+							</tr>
                             <tr>
                                 <td rowspan="9">NDK r10e</td>
                                 <td>Windows 32-bit</td>
