Add jdk 1.7 and 1.8u74 link

--- a/index.html
+++ b/index.html
@@ -1623,26 +1623,26 @@
                             </tr>
                         </thead>
                         <tbody>
+                        	<tr>
+                        		<td align="center">1.8 u74</td>
+                                <td align="center">
+                                    <a href="http://pan.baidu.com/s/1c1w1TCk">32位</a> <a href="http://pan.baidu.com/s/1nu3BdVj">64位</a>
+                                </td>
+                                <td align="center"><a href="http://pan.baidu.com/s/1c0Tv5Pe">64位</a>
+                                </td>
+                                <td align="center">
+                                    <a href="http://pan.baidu.com/s/1gecIYxP">32位</a> <a href="http://pan.baidu.com/s/1hrtBXkg">64位</a>
+                                </td>
+                        	</tr>
                             <tr>
-                                <td align="center">1.8 u5</td>
+                                <td align="center">1.7 u80</td>
                                 <td align="center">
-                                    <a href="http://pan.baidu.com/s/1bn2CVIB">32位</a> <a href="http://pan.baidu.com/s/1eQtJyGq">64位</a>
+                                    <a href="http://pan.baidu.com/s/1bfAT58">32位</a> <a href="http://pan.baidu.com/s/1gewvEAR">64位</a>
                                 </td>
-                                <td align="center"><a href="http://pan.baidu.com/s/1pJkD78R">64位</a>
-                                </td>
-                                <td align="center">
-                                    <a href="http://pan.baidu.com/s/1o64s0pc">32位</a> <a href="http://pan.baidu.com/s/1jG3KBjg">64位</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="center">1.7 u60</td>
-                                <td align="center">
-                                    <a href="http://pan.baidu.com/s/1nt5a3jj">32位</a> <a href="http://pan.baidu.com/s/1o61AAHc">64位</a>
-                                </td>
-                                <td align="center"><a href="http://pan.baidu.com/s/1nt0qGfn">64位</a>
+                                <td align="center"><a href="http://pan.baidu.com/s/1hrl4x3u">64位</a>
                                 </td>
                                 <td align="center">
-                                    <a href="http://pan.baidu.com/s/1eQd4wVK">32位</a> <a href="http://pan.baidu.com/s/1jGzGQLw">64位</a>
+                                    <a href="http://pan.baidu.com/s/1c1pG2Fu">32位</a> <a href="http://pan.baidu.com/s/1hrecZ9U">64位</a>
                                 </td>
                             </tr>
                             <tr>
