Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1174,8 +1174,8 @@
                                 <td>¥6.66</td>
                                 <td>Eman</td>
                                 <td>¥10.24</td>
-                                <td></td>
-                                <td></td>
+                                <td>comeontakeit</td>
+                                <td>¥5.12</td>
                                 <td></td>
                                 <td></td>
                             </tr>
