Add JLog friendly link

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -204,6 +204,11 @@
 	                            <img src="http://7xrhuv.com1.z0.glb.clouddn.com/androidweekly_cn.png" />
 	                        </a>
 	                    </li>
+                        <li>
+                            <a href="http://www.race604.com" target="_blank" title="专注 Android 移动应用开发，在开发中积累和成长。">
+                                <img src="http://ww4.sinaimg.cn/large/8a41f469jw1f27s3aeagij207803kt8o.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
