--- a/gay_friends.html
+++ b/gay_friends.html
@@ -209,6 +209,11 @@
                                 <img src="http://ww4.sinaimg.cn/large/8a41f469jw1f27s3aeagij207803kt8o.jpg" />
                             </a>
                         </li>
+                        <li>
+                            <a href="" target="_blank" title="Hello，大家好，我是张涛，网名kymjs，在深圳的湖北人。开源中国移动开发工程师。爱看书，爱敲码，善于交流，乐于分享。曾担任电影《天籁：一万年以后》新媒体推广产品经理，负责电影推广营销事项。">
+                                <img src="http://ww1.sinaimg.cn/large/8a41f469jw1f27ukzgjhuj203m01s0tb.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
