Fix Android Studio Linux and windows link error

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 								</tr>
 							<tr>
 							  <td >Windows</td>
-							  <td align="left"><a href="http://pan.baidu.com/s/1bfAQgm">android-studio-ide-143.2682553-windows.zip</a></td>
+							  <td align="left"><a href="http://pan.baidu.com/s/1kTRf8G3">android-studio-ide-143.2682553-windows.zip</a></td>
 							  <td>293 MB</td>
 							  <td>37f3eb187a92a6722c21e2aa1ef7d0624a169aa6</td>
 							  <td rowspan="4"><a href="http://ww4.sinaimg.cn/large/8a41f469jw1f25w78f9hgj21fm0tgqe3.jpg">查看</a></td>
@@ -265,7 +265,7 @@
 							<tr>
 							  <td>Linux</td>
 							  <td align="left">
-										<a href="http://pan.baidu.com/s/1kTRf8G3">android-studio-ide-143.2682553-linux.zip</a>
+										<a href="http://pan.baidu.com/s/1bfAQgm">android-studio-ide-143.2682553-linux.zip</a>
 							  </td>
 							  <td>291 MB</td>
 							  <td>2fcef56cb22dbc87269c94d13ad50ab6005f50fa</td>
