Fix Android Studio Linux and windows link error

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 								</tr>
 							<tr>
 							  <td >Windows</td>
-							  <td align="left"><a href="http://pan.baidu.com/s/1eRbyTs2">android-studio-ide-143.2682552-windows.zip</a></td>
+							  <td align="left"><a href="http://pan.baidu.com/s/1kUjwt4j">android-studio-ide-143.2682552-windows.zip</a></td>
 							  <td>304 MB</td>
 							  <td>e1cf6d8f586a25f83d2994896f65c185614baeb1</td>
 							  <td rowspan="4"><a href="http://ww4.sinaimg.cn/large/8a41f469jw1f25w8rbsquj21dw0uk7f4.jpg">查看</a></td>
@@ -319,7 +319,7 @@
 							<tr>
 							  <td>Linux</td>
 							  <td align="left">
-										<a href="http://pan.baidu.com/s/1kUjwt4j">android-studio-ide-143.2682552-linux.zip</a>
+										<a href="http://pan.baidu.com/s/1eRbyTs2">android-studio-ide-143.2682552-linux.zip</a>
 							  </td>
 							  <td>302 MB</td>
 							  <td>17e432a9eb701e791365cedec9783a23f3a97fcd</td>
