--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
         <div id="body-container" class="container">
             <div class="row">
                 <div>
+                    <a href="" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情">
+                        <img src='http://ww2.sinaimg.cn/large/8a41f469jw1f27y2nqh6ij21cw0iw77t.jpg' border="0" />
+                    </a>
+                </div>
+                <div>
                     <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。</p>
                     <p>欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道。</p>
