--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
     <section id="body">
         <div id="body-container" class="container">
             <div class="row">
-                <div>
+                <!-- <div>
                     <a href="" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情">
                         <img src='http://ww2.sinaimg.cn/large/8a41f469jw1f27y2nqh6ij21cw0iw77t.jpg' border="0" />
                     </a>
-                </div>
+                </div> -->
                 <div>
                     <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。</p>
