Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1176,6 +1176,16 @@
                                 <td>¥10.24</td>
                                 <td>comeontakeit</td>
                                 <td>¥5.12</td>
+                                <td>东升</td>
+                                <td>¥10.24</td>
+                            </tr>
+                            <tr>
+                                <td>wenbobo</td>
+                                <td>¥2</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
