Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1182,8 +1182,8 @@
                             <tr>
                                 <td>wenbobo</td>
                                 <td>¥2</td>
-                                <td></td>
-                                <td></td>
+                                <td>李国梁</td>
+                                <td>¥10</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
