Add devtf.cn friend link

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -214,6 +214,11 @@
                                 <img src="http://ww1.sinaimg.cn/large/8a41f469jw1f27ukzgjhuj203m01s0tb.jpg" />
                             </a>
                         </li>
+                        <li>
+                            <a href="http://www.devtf.cn" target="_blank" title="开发技术前线 ( Dev Tech Frontier ) 是一个各个IT领域 ( 前期只有Android和iOS )高质量技术文章、开源库、技术咨询的聚合网站，通过引入最新的优质文章，让我们的技术跟上国际步伐。该网站由Mr.Simple、chaossss、tiny-times、dupengwei创立，并且由开发技术前线Android开源组与开发技术前线iOS开源组维护,希望我们做的这些对大家有一点帮助。">
+                                <img src="http://ww1.sinaimg.cn/large/8a41f469jw1f29a4e11baj203m01st8i.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
